--- a/gui.ui
+++ b/gui.ui
@@ -136,7 +136,7 @@ font-size:36px;
         <cursorShape>ArrowCursor</cursorShape>
        </property>
        <property name="text">
-        <string>1544441 + </string>
+        <string> </string>
        </property>
        <property name="frame">
         <bool>true</bool>
@@ -303,7 +303,7 @@ border: none
 }</string>
        </property>
        <property name="text">
-        <string>0123456789</string>
+        <string>0</string>
        </property>
        <property name="maxLength">
         <number>10</number>
