--- a/gui.ui
+++ b/gui.ui
@@ -136,7 +136,7 @@ font-size:36px;
         <cursorShape>ArrowCursor</cursorShape>
        </property>
        <property name="text">
-        <string> </string>
+        <string/>
        </property>
        <property name="frame">
         <bool>true</bool>
@@ -305,8 +305,8 @@ border: none
        <property name="text">
         <string>0</string>
        </property>
-       <property name="maxLength">
-        <number>10</number>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
